# rules_d

d/: toolchain.bzl
d/private/: providers.bzl
d/private/rules/: cc_toolchain.bzl  compile.bzl  library.bzl  link.bzl
d/private/sdk/: BUILD.dmd.bazel  BUILD.ldc.bazel
