load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_cc//cc:defs.bzl", "cc_import")
load("@rules_d//d:toolchain.bzl", "d_toolchain")

filegroup(
    name = "all_files",
    srcs = [
        ":dmd",
        ":dub",
        ":rdmd",
    ],
)

filegroup(
    name = "druntime_files",
    srcs = glob(["src/druntime/import/**"]),
)

filegroup(
    name = "phobos_files",
    srcs = glob(["src/phobos/**"]),
)

filegroup(
    name = "stdlib_files",
    srcs = select({
        "@platforms//os:linux": glob(
            ["linux/lib64/**"],
            allow_empty = True,
        ),
        "@platforms//os:macos": glob(
            ["osx/lib/**"],
            allow_empty = True,
        ),
        "@platforms//os:windows": glob(
            ["windows/lib64/**"],
            allow_empty = True,
        ),
    }),
)

filegroup(
    name = "dmd",
    srcs = select({
        "@platforms//os:linux": ["linux/bin64/dmd"],
        "@platforms//os:macos": ["osx/bin/dmd"],
        "@platforms//os:windows": ["windows/bin64/dmd.exe"],
    }),
    data = [
        ":druntime_files",
        ":phobos_files",
        ":stdlib_files",
    ],
)

filegroup(
    name = "dub",
    srcs = select({
        "@platforms//os:linux": ["linux/bin64/dub"],
        "@platforms//os:macos": ["osx/bin/dub"],
        "@platforms//os:windows": ["windows/bin64/dub.exe"],
    }),
)

filegroup(
    name = "rdmd",
    srcs = select({
        "@platforms//os:linux": ["linux/bin64/rdmd"],
        "@platforms//os:macos": ["osx/bin/rdmd"],
        "@platforms//os:windows": ["windows/bin64/rdmd.exe"],
    }),
    data = [":dmd"],
)

copy_file(
    name = "libphobos_pic",
    src = select({
        "@platforms//os:linux": "linux/lib64/libphobos2.a",
        "@platforms//os:macos": "osx/lib/libphobos2.a",
        "@platforms//os:windows": "windows/lib64/phobos64.lib",
    }),
    out = "libphobos.pic.a",
)

cc_import(
    name = "libphobos",
    pic_static_library = ":libphobos_pic",
    static_library = select({
        "@platforms//os:linux": "linux/lib64/libphobos2.a",
        "@platforms//os:macos": "osx/lib/libphobos2.a",
        "@platforms//os:windows": "windows/lib64/phobos64.lib",
    }),
)

d_toolchain(
    name = "d_toolchain",
    compiler_flags = [
        "-conf=",
        "-I={D_COMPILER_ROOT}/src/druntime/import",
        "-I={D_COMPILER_ROOT}/src/phobos",
    ],
    compiler_flags_nopic = [],
    compiler_flags_pic = ["-fPIC"],
    d_compiler = ":dmd",
    dub_tool = ":dub",
    libphobos = ":libphobos",
    linker_flags = select({
        "@platforms//os:linux": [
            "-L{D_COMPILER_ROOT}/linux/lib64",
        ],
        "@platforms//os:macos": ["-L{D_COMPILER_ROOT}/osx/lib"],
        "@platforms//os:windows": [
            "/LIBPATH:{D_COMPILER_ROOT}/windows/lib64",
            "/DEFAULTLIB:msvcrt.lib",
            "/NODEFAULTLIB:libcmt",
            "/INCREMENTAL:NO",
        ],
    }),
    rdmd_tool = ":rdmd",
)
