load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_cc//cc:defs.bzl", "cc_import")
load("@rules_d//d:toolchain.bzl", "d_toolchain")

filegroup(
    name = "all_files",
    srcs = [
        ":dmd",
        ":dub",
        ":rdmd",
    ],
)

filegroup(
    name = "druntime_files",
    srcs = glob([
        "import/core/**",
        "import/etc/**",
    ]) + ["import/object.d"],
)

filegroup(
    name = "phobos_files",
    srcs = glob(["import/std/**"]),
)

filegroup(
    name = "stdlib_files",
    srcs = glob(["lib/**"]),
)

copy_file(
    name = "druntime_pic",
    src = "lib/libdruntime-ldc.a",
    out = "libdruntime-ldc.pic.a",
)

cc_import(
    name = "druntime",
    pic_static_library = ":druntime_pic",
    static_library = "lib/libdruntime-ldc.a",
)

copy_file(
    name = "libphobos_pic",
    src = "lib/libphobos2-ldc.a",
    out = "libphobos2-ldc.pic.a",
)

cc_import(
    name = "libphobos",
    pic_static_library = ":libphobos_pic",
    static_library = "lib/libphobos2-ldc.a",
)

filegroup(
    name = "dmd",
    srcs = ["bin/ldmd2"],
    data = [
        ":druntime_files",
        ":phobos_files",
        ":stdlib_files",
    ],
)

filegroup(
    name = "dub",
    srcs = ["bin/dub"],
)

filegroup(
    name = "rdmd",
    srcs = ["bin/rdmd"],
    data = [":dmd"],
)

d_toolchain(
    name = "d_toolchain",
    compiler_flags = [],
    compiler_flags_nopic = [],
    compiler_flags_pic = ["--relocation-model=pic"],
    d_compiler = ":dmd",
    druntime = ":druntime",
    dub_tool = ":dub",
    libphobos = ":libphobos",
    linker_flags = [],
    rdmd_tool = ":rdmd",
)
